src/golden/cards/templates/bindings/errors/test.golden/nostyleassign.fl
	card DontAssignToStyles
		template label
			styleme <- 'not allowed'
